# solana_token_financing

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
accounts/: admin.json  borrower.json  id.json  mint.json  nemeos.json  passphrase.txt  seller.json  usdc.json
app/: package.json  utils.ts
app/anchor/: idl.json  idlType.ts  setup.ts  solanaProgramLib.ts  solana_token_financing.json  solana_token_financing.ts
app/app/: constants.ts  layout.tsx  page.tsx  providers.tsx
app/app/api/airdrop-usdc/: route.ts
app/app/api/increment/: route.ts
app/components/: buy-with-nemeos-button.tsx  buy-with-nemeos.tsx  counter-state.tsx  increment-button.tsx  navbar.tsx  payLoanStep-button.tsx  solana-pay.tsx  token-buying-options.tsx  vault-state.tsx  wallet-balances.tsx  wallet-multi-button.tsx
programs/solana_token_financing/: Cargo.toml
programs/solana_token_financing/src/: constants.rs  errors.rs  lib.rs
programs/solana_token_financing/src/instructions/: close_loan.rs  close_vault_accounts.rs  create_loan.rs  full_early_repayment.rs  initialize_token_account_owner_pda.rs  initialize_token_vault.rs  mod.rs  payment.rs  token_deposit.rs  token_withdraw.rs  upfront_payment.rs
programs/solana_token_financing/src/states/: loan_account.rs  mod.rs  vault_account.rs
tests/: solana_token_financing.ts  solana_token_financing_2.ts
